[package]
name = "yui"
version = "0.1.0"
authors = ["Jeffrey Yu <92849+wehjin@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "yui"
path = "src/lib.rs"

[dependencies]
ncurses="5.99.0"
rand="0.7.3"
log="0.4.8"
simplelog="0.7.4"
stringedit={ git="https://github.com/wehjin/stringedit.git" }
